force-app/main/default/objects/Fee_Settlement_Detail__c/Fee_Settlement_Detail__c.object-meta.xml
<CustomObject>
    <label>Fee/Settlement Detail</label>
    <nameField>
        <displayFormat>FSD-{0000}</displayFormat>
        <label>Fee/Settlement Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee/Settlement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>