force-app/main/default/objects/Fee_Settlement_Detail__c/fields/Payment_Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Item__c</fullName>
    <label>Payment Schedule Item</label>
    <referenceTo>Payment_Schedule_Item__c</referenceTo>
    <relationshipLabel>Fee/Settlement Details</relationshipLabel>
    <relationshipName>Fee_Settlement_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>