force-app/main/default/objects/Fee_Settlement_Detail__c/fields/Settlement_Plan_Item__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Plan_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Plan Item</label>
    <referenceTo>Settlement_Plan_Item__c</referenceTo>
    <relationshipLabel>Fee/Settlement Details</relationshipLabel>
    <relationshipName>Fee_Settlement_Details</relationshipName>
    <type>Lookup</type>
</CustomField>