force-app/main/default/objects/Fee_Settlement_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Settlement_Type</valueSetName>
    </valueSet>
</CustomField>